syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/loadable.proto";
import "stremio/core/types/manifest.proto";

message AddonDetails {
  optional Selected selected = 1;
  optional stremio.core.types.Descriptor local_addon = 2;
  optional LoadableDescriptor remote_addon = 3;

  message Selected {
    required string transport_url = 1;
  }
}

message LoadableDescriptor {
  required string transport_url = 1;
  oneof content {
    Loading loading = 2;
    Error error = 3;
    stremio.core.types.Descriptor ready = 4;
  }
}